# first_project

./: Cargo.toml  LICENSE  README.md  index.html
src/: index.html  lib.rs
src/scripts/: script.js
